# rmoss_core

./: .gitignore  LICENSE  README.md
rm_base/: CMakeLists.txt  README.md  package.xml
rm_base/doc/: fixed_packet.md  protocol_example.md  robot_base_exmaple.md
rm_base/include/rm_base/: comm_dev_interface.h  comm_dev_interface.hpp  fixed_packet.h  fixed_packet.hpp  fixed_packet_tool.h  fixed_packet_tool.hpp  protocol_example.h  protocol_example.hpp  robot_base_example.h  robot_base_example.hpp  serial_port.h  serialport.h  serialport_dev.h  serialport_dev.hpp  simple_robot_base_node.hpp  trans_dev_interface.h  trans_dev_serialport.h  transporter_interface.hpp  uart_transporter.hpp  udp_transporter.hpp
rm_base/include/robot_base/: fixed_common_base.h  fixed_packet.h  protocol_example.h  robot_base_example.h  serialport_trans_dev.h  trans_dev_interface.h
rm_base/nodes/: example_base_node.cpp  robot_base_example_node.cpp
rm_base/scripts/: chassis_control_test.py  gimbal_control_test.py  test_control_chassis.py  test_control_gimbal.py
rm_base/src/: fixed_common_base.cpp  fixed_packet.cpp  fixed_packet_tool.cpp  robot_base_example.cpp  serial_port.cpp  serialport.cpp  serialport_dev.cpp  serialport_trans_dev.cpp  simple_robot_base_main.cpp  simple_robot_base_node.cpp  trans_dev_serialport.cpp  uart_transporter.cpp  udp_transporter.cpp
rm_base/test/: CMakeLists.txt  dummy_transporter.hpp  test_fixed_packet.cpp  test_fixed_packet_tool.cpp  test_udp_transporter.cpp
rm_cam/: CMakeLists.txt  README.md  package.xml
rm_cam/config/: cam_params.yaml
rm_cam/include/rm_cam/: cam_client.hpp  cam_dev_interface.h  cam_dev_interface.hpp  cam_interface.hpp  cam_server.hpp  camera_node.h  camera_task.h  camera_task.hpp  sim_cam_image_dev.h  sim_cam_image_dev.hpp  sim_cam_video_dev.h  sim_cam_video_dev.hpp  usb_cam.hpp  usb_cam_dev.h  usb_cam_dev.hpp  usb_cam_node.hpp  virtual_cam.hpp  virtual_cam_dev.hpp  virtual_cam_node.hpp
rm_cam/launch/: composition.launch.py  sim_cam_image.launch.py  usb_cam.launch.py  virtual_image_cam.launch.py
rm_cam/nodes/: task_sim_cam_image.cpp  task_sim_cam_video.cpp  task_usb_cam video.cpp  task_usb_cam.cpp  usb_cam_node.cpp  virtual_image_cam_node.cpp  virtual_video_cam_node.cpp
rm_cam/res/: test_image_parameters.txt  usb_cam_config.yaml
rm_cam/src/: cam_client.cpp  cam_server.cpp  camera_node.cpp  camera_task.cpp  sim_cam_image_dev.cpp  sim_cam_video_dev.cpp  usb_cam.cpp  usb_cam_dev.cpp  usb_cam_main.cpp  usb_cam_node.cpp  virtual_cam.cpp  virtual_cam_dev.cpp  virtual_cam_main.cpp  virtual_cam_node.cpp
rm_cam/src/cam_driver/: usb_cam.cpp  virtual_cam.cpp
rm_cam/test/: dummy_cam.hpp  test_cam_server.cpp
rm_common/: README.md  (+2 more)
rm_interfaces/: CMakeLists.txt  package.xml
rm_interfaces/msg/: AutoAimInfo.msg  ChassisCmd.msg  ChassisControl.msg  Gimbal.msg  Gimbal2D.msg  GimbalCmd.msg  GimbalControl.msg  RailChassisInfo.msg  ShootCmd.msg  ShootControl.msg  StdBotState.msg  StdRobotState.msg  TaskAutoAimInfo.msg
rm_interfaces/srv/: GetMode.srv  SetMode.srv
rm_projectile_motion/: CMakeLists.txt  README.md  package.xml
rm_projectile_motion/doc/: projectile_motion_iteration.md
rm_projectile_motion/include/rm_projectile_motion/: gaf_projectile_model.h  gaf_projectile_model.hpp  gaf_projectile_solver.hpp  gimbal_transform_tool.hpp  gravity_projectile_model.h  gravity_projectile_model.hpp  gravity_projectile_solver.hpp  (+8 more)
rm_projectile_motion/src/: gaf_projectile_model.cpp  gaf_projectile_solver.cpp  gimbal_transform_tool.cpp  gravity_projectile_model.cpp  gravity_projectile_solver.cpp  iteration_projectile_model.cpp  iterative_projectile_solver.cpp  projectile_transform_tool.cpp
rm_task/: CMakeLists.txt  README.md  package.xml
rm_task/launch/: task_show_image.launch.py
rm_task/nodes/: task_show_image.cpp  task_show_image_node.cpp
rm_task/src/: task_image_proc.cpp  task_image_proc_node.cpp  task_show_image.cpp  task_show_image_node.cpp
rm_tool/: CMakeLists.txt  README.md  package.xml
rm_tool/src/: debug_tool.cpp  image_tool.cpp  mono_measure_tool.cpp  time_tool.cpp
rm_util/: CMakeLists.txt  README.md  package.xml
rm_util/src/: debug.cpp  image_task_server.cpp  math.cpp  mono_measure_tool.cpp  time_utils.cpp
rmoss/: CMakeLists.txt  package.xml
rmoss_base/: CMakeLists.txt  README.md  package.xml
rmoss_base/scripts/: test_control_chassis.py  test_control_gimbal.py
rmoss_base/src/: simple_robot_base_main.cpp  simple_robot_base_node.cpp
rmoss_base/test/: CMakeLists.txt  dummy_transporter.hpp  test_fixed_packet.cpp  test_fixed_packet_tool.cpp  test_udp_transporter.cpp
rmoss_cam/: CMakeLists.txt  README.md  package.xml
rmoss_cam/config/: cam_params.yaml
rmoss_cam/launch/: benchmark.launch.py  composition.launch.py  usb_cam.launch.py  virtual_image_cam.launch.py
rmoss_cam/resource/: image_cam_calibration.yaml
rmoss_cam/scripts/: task_client.py
rmoss_cam/src/: benchmark_test_main.cpp  cam_client.cpp  cam_server.cpp  cam_server_manager.cpp  component_container.cpp  image_task_demo_node.cpp  intra_cam_client.cpp  usb_cam_main.cpp  usb_cam_node.cpp  virtual_cam_main.cpp  virtual_cam_node.cpp
rmoss_cam/test/: CMakeLists.txt  dummy_cam.hpp  test_cam_client.cpp  test_cam_server.cpp  test_intra_cam_client.cpp
rmoss_core/: CMakeLists.txt  package.xml
rmoss_entity_cam/: CMakeLists.txt  README.md  package.xml
rmoss_entity_cam/config/: 048021610077.Config  cam_param.yaml
rmoss_entity_cam/launch/: daheng_cam.launch.py  mindvision_cam.launch.py
rmoss_entity_cam/src/: daheng_cam_node.cpp  daheng_cam_node_main.cpp  mindvision_cam_node.cpp  mindvision_cam_node_main.cpp
rmoss_projectile_motion/: CMakeLists.txt  README.md  package.xml
rmoss_projectile_motion/src/: gaf_projectile_solver.cpp  gimbal_transform_tool.cpp  gravity_projectile_solver.cpp  iterative_projectile_tool.cpp
rmoss_util/: CMakeLists.txt  README.md  package.xml
rmoss_util/src/: debug.cpp  image_utils.cpp  math.cpp  mono_measure_tool.cpp  task_manager.cpp  time_utils.cpp  url_resolver.cpp
rmoss_util/test/: CMakeLists.txt  test_url_resolve.cpp
(+106 files in other folders)
