<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmoss_cam</name>
  <version>1.0.0</version>
  <description>
    RoboMaster Camera Package, it provides a simple usb camera ros node and a general camera interface, 
    in addition, it also provides simulated camera based on iamge and video.
  </description>
  <maintainer email="zhenpeng.ge@qq.com">zhenpeng ge</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rmoss_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>libopencv-dev</depend>
  <depend>cv_bridge</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

